# axum-svelte-fullstack

./: .sample.env  Cargo.toml  Readme.md  docker-compose.yml  local.Dockerfile
backend_axum/: Cargo.toml
backend_axum/src/: main.rs
backend_axum/src/controller/: mod.rs  ssa.rs
backend_axum/src/database/: mod.rs  ssa.rs
backend_axum/src/error/: mod.rs
backend_axum/src/extract/: auth.rs
backend_axum/src/middleware/: auth.rs
backend_axum/src/model/: auth.rs  mod.rs  secret.rs
backend_axum/src/model/ssa/: mod.rs  request.rs  response.rs
backend_axum/src/observability/: mod.rs
backend_axum/src/service/: auth.rs
backend_axum/src/state/: mod.rs
database_migrations/: Cargo.toml
database_migrations/sql/: V1__Test.sql
database_migrations/src/: lib.rs  main.rs
database_seed/: Cargo.toml
database_seed/src/: data_file.rs  database.rs  main.rs  zip_iterator.rs
frontend_svelte/: .sample.env  package-lock.json  package.json
frontend_svelte/src/: app.html
frontend_svelte/src/lib/component/: Header.svelte  LineChart.svelte  SignInButton.svelte  SignOutButton.svelte
frontend_svelte/src/lib/config/: api.ts  auth.ts
frontend_svelte/src/lib/middleware/: auth.ts
frontend_svelte/src/lib/model/: tabular.ts
frontend_svelte/src/lib/model/ssa/: request.ts  response.ts
frontend_svelte/src/lib/service/: auth.ts  ssa.ts
frontend_svelte/src/lib/store/: auth.svelte.ts
frontend_svelte/src/routes/: +layout.svelte  +layout.ts
frontend_svelte/src/routes/(protected)/: +layout.svelte  +page.svelte
frontend_svelte/src/routes/(protected)/ssa-names/: +page.svelte
frontend_svelte/src/routes/(public)/login/: +page.svelte
frontend_svelte/src/routes/(public)/logout/: +page.svelte
integration_tests/: Insomnia_API_Testing.yaml
