[package]
name = "backend_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
native-tls = "0.2.14"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
postgres-native-tls = "0.5.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed", "reqwest"] }
