[package]
name = "database_seed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
csv = "1.3.1"
dotenv = "0.15.0"
futures-util = "0.3.31"
database_migrations = { path = "../database_migrations" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "4.5.0"
